# visuales

./: .gitignore  Cargo.toml  README.md  Readme.md  package.json
le_parc/: Cargo.toml  Readme.md  circles.rs  config.rs  parable.rs  parables.rs  squares.rs  waves.rs
public/: bold.blob  prompt_regular.blob
src/components/canvas/: Bubble.tsx  BubbleDispenser.tsx  Text.tsx  Wall.tsx
src/components/canvas/Shader/: Shader.tsx
src/components/canvas/Shader/glsl/: shader.frag
src/components/layout/: canvas.tsx
src/pages/: index.tsx
tame_impala/: Cargo.toml  Readme.md  circles.rs  test.rs
utils/: Cargo.toml
utils/src/: gif_creator.rs  lib.rs
